==> china-djyos/djyos/bsp/cpudrv/Atmel/SamV7/src/spi/cpu_peri_spi.c <==
#include <stdint.h>
#include <string.h>
#include <math.h>
#include "cpu_peri.h"
#include "spibus.h"
#include "xdmac.h"
#include "xdmad.h"
#include "spi_dma.h"
#include "project_config.h"     //本文件由IDE中配置界面生成，存放在APP的工程目录中。
#define CFG_MODULE_ENABLE_CPU_ONCHIP_SPI    false //如果勾选了本组件，将由DIDE在project_config.h或命令行中定义为true
#define CFG_SPI_BUF_LEN             128       //"缓冲大小",配置SPI缓冲区大小
#define CFG_SPI_DMA_BUF_LEN         128       //"DMA缓冲大小",配置DMA缓冲大小
#define CFG_SPI0_ENABLE             false     //"SPI0使能",使能SPI0
#define CFG_SPI1_ENABLE             false     //"SPI1使能",使能SPI1
#define tagSpiReg  Spi
#define SPI_PCS(npcs)       ((~(1 << npcs) & 0xF) << 16)

static void __SPI_SetClk(volatile tagSpiReg *Reg,u32 Fre,u8 cs)
{
    if(cs > CN_CS_MAX)
        return;

    Reg->SPI_CR |= SPI_CR_SPIDIS;
    Reg->SPI_CSR[cs] &= ~SPI_CSR_SCBR_Msk;
    Reg->SPI_CSR[cs] |= SPI_CSR_SCBR(CN_CFG_MCLK/2/Fre);
    Reg->SPI_CR |= SPI_CR_SPIEN;
}

static void __SPI_Config(volatile tagSpiReg *Reg,tagSpiConfig *ptr,u8 cs)
{
    if(cs > CN_CS_MAX)
        return;
    __SPI_SetClk(Reg,ptr->Freq,cs);

    Reg->SPI_CR |= SPI_CR_SPIDIS;
    //set the PHA
    if(ptr->Mode & SPI_CPHA)
    {
        Reg->SPI_CSR[cs] |= SPI_CSR_NCPHA;
    }
    else
    {
        Reg->SPI_CSR[cs] &= ~SPI_CSR_NCPHA;
    }
    //set the cpol
    if(ptr->Mode & SPI_CPOL)
    {
        Reg->SPI_CSR[cs] |= SPI_CSR_CPOL;
    }
    else
    {
        Reg->SPI_CSR[cs] &= ~SPI_CSR_CPOL;
    }

    if(ptr->CharLen <= 16 && ptr->CharLen >= 4)
    {
        Reg->SPI_CSR[cs] &= ~SPI_CSR_BITS_Msk;
        Reg->SPI_CSR[cs] |= SPI_CSR_BITS(ptr->CharLen - 8);
    }
    Reg->SPI_CR |= SPI_CR_SPIEN;
}

static void __SPI_HardConfig(u32 BaseAddr)
{
    tagSpiReg *Reg;
    u32 temp,Fre;

    Reg = (tagSpiReg *)BaseAddr;

    XDMAD_Initialize(&dmad,0);

    Reg->SPI_CR = SPI_CR_SPIDIS|SPI_CR_SWRST;           //复位控制器
    Reg->SPI_MR = SPI_MR_MSTR|SPI_MR_MODFDIS|QSPI_MR_NBBITS_8_BIT;

    //默认使用4M波特率
    Fre = 4*1000*1000;
    for(temp = 0; temp < 4; temp ++)
    {
        Reg->SPI_CSR[temp] = SPI_CSR_CSAAT|SPI_CSR_SCBR(CN_CFG_MCLK/2/Fre);
    }
    //使用DMA方式
//    __SPI_DmaConfig(BaseAddr);

    Reg->SPI_CR = SPI_CR_SPIEN;
}

static bool_t __SPI_BusCsActive(tagSpiReg *Reg, u8 cs)
{
//  s_ChipSelect = cs;
    Reg->SPI_TDR |= SPI_TDR_PCS(cs);
    Reg->SPI_MR  &= ~SPI_MR_PCS(0x0F);
    Reg->SPI_MR  |= SPI_MR_PCS(cs);
    return true;
}

static bool_t __SPI_BusCsInActive(tagSpiReg *Reg, u8 cs)
{
    Reg->SPI_CR = SPI_CR_LASTXFER | SPI_CR_SPIDIS;
    return false;
}

static s32 __SPI_BusCtrl(tagSpiReg *Reg,u32 cmd,ptu32_t data1,ptu32_t data2)
{
    s32 result = 1;
    if( ((u32)Reg != (u32)tg_SPI_Reg[CN_SPI0]) &&
            ((u32)Reg != (u32)tg_SPI_Reg[CN_SPI1]) )
        return 0;

    switch(cmd)
    {
    case CN_SPI_SET_CLK:
        __SPI_SetClk(Reg,data1,data2);
        break;
    case CN_SPI_CS_CONFIG:
        __SPI_Config(Reg,(tagSpiConfig *)data1,data2);
        break;
    case CN_SPI_SET_AUTO_CS_EN:
        // 硬件上如果有自动产生CS的配置
        break;
    case CN_SPI_SET_AUTO_CS_DIS:
        break;
    default:
        break;
    }
    return result;
}

static bool_t __SPI_TxRxPoll(tagSpiReg *Reg,u8 *srcAddr,u32 wrSize,
        u8 *destAddr, u32 rdSize,u32 recvoff,u8 cs)
{
    u32 i,len_limit;
    if(wrSize + rdSize == 0)
        return false;

    Reg->SPI_CR |= SPI_CR_SPIEN;
    Reg->SPI_RDR;
    len_limit = MAX(wrSize, rdSize + recvoff);
    for (i=0;i<len_limit;i++)
    {
        if (i<wrSize)
        {
            __SPI_Write(Reg,cs,srcAddr[i]);
        }
        else if((i>=wrSize)&&(i<len_limit))
        {
          __SPI_Write(Reg,cs,0);
        }
        if((destAddr) && (i>=recvoff) )
        {
            destAddr[i-recvoff] = __SPI_Read(Reg);
        }
        else
        {
            __SPI_Read(Reg);
        }
    }

    return true;
}
